manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-ing
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
# Set Your host DNS pointing to the LoadBalancer IP
  - host: hello.test.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-svc
          servicePort: 80
